<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home_tab_home" />
    <item
        android:id="@+id/nav_offer"
        android:icon="@drawable/ic_nav_offer"
        android:title="@string/home_tab_offer" />
    <item
        android:id="@+id/nav_find"
        android:icon="@drawable/ic_nav_find"
        android:title="@string/home_tab_find" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/home_tab_chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/home_tab_profile" />
</menu>


